--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   get_it: ^8.2.0
   isar: ^3.1.0+1
   talker_logger: ^5.0.1
+  collection: ^1.19.1
 
 dev_dependencies:
   flutter_test:
@@ -66,8 +67,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-    - assets/fonts
-    - assets/images
+    - assets/fonts/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
