--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   talker_logger: ^5.0.1
   collection: ^1.19.1
   flutter_svg: ^2.2.1
+  introduction_screen: ^4.0.0
+  circle_list: ^1.0.5
 
 dev_dependencies:
   flutter_test:
