--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   collection: ^1.19.1
   flutter_svg: ^2.2.1
   dots_indicator: ^4.0.1
+  firebase_core: ^4.1.1
 
 dev_dependencies:
   flutter_test:
