--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_svg: ^2.2.1
   dots_indicator: ^4.0.1
   firebase_core: ^4.1.1
+  firebase_auth: ^6.1.0
 
 dev_dependencies:
   flutter_test:
