--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   firebase_core: ^4.1.1
   firebase_auth: ^6.1.0
   animated_bottom_navigation_bar: ^1.4.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
