--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   firebase_auth: ^6.1.0
   animated_bottom_navigation_bar: ^1.4.0
   intl: ^0.20.2
+  syncfusion_flutter_datepicker: ^31.2.2
 
 dev_dependencies:
   flutter_test:
